Extra integration test and complete some functionality
